[package]
name = "adv-code-2025"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing = ["code-timing-macros/tracing", "dep:tracing"]

[dependencies]
anyhow = "1.0.100"
code-timing-macros = { version = "0.0.6", features = ["release"] }
const_format = "0.2.35"

# Additional recommended dependencies
itertools = "0.14.0"
regex = "1.12.2"
tracing = { version = "0.1.43", optional = true }
